# pyve

./: .codecov.yml  .envrc.prev  .gitignore  .gitignore.prev  .project-guide.yml  .project-guides.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  audit_phasestory_refs.py  clean_phasestory_refs.py  codecov.yml  lines_with_phasestory_nums_clean.txt  lines_with_phasestory_nums_dirty.txt  mkdocs.yml  pytest.ini  pyve.sh  pyve.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: deploy-docs.yml  test.yml  update-homebrew.yml
.pyve/: config
.pyve/.v2-legacy/: pyve-config
docs/: building.md  ci-cd-examples.md  codecov-setup.md  decisions.md  guide_versions_spec.md  planning.md  versions.md
docs/guides/: codecov-setup-guide.md  dependencies_guide.md  planning_guide.md  project-guide.md  testing_guide.md
docs/project-guide/: .metadata.yml  README.md  go.md
docs/site/: backends.md  ci-cd.md  (+11 more)
lib/: backend_detect.sh  check_composer.sh  distutils_shim.sh  env_detect.sh  envrc_composer.sh  envrc_safety.sh  envs.sh  gitignore_composer.sh  heal.sh  init_composer.sh  manifest.sh  micromamba.sh  micromamba_bootstrap.sh  micromamba_core.sh  micromamba_env.sh  param_graph.sh  project_guide.sh  purge_composer.sh  pyve_env_spec_helper.py  pyve_env_sync_helper.py  pyve_manifest_write.py  pyve_testenvs_helper.py  pyve_toml_helper.py  resolution_reasoning.sh  staleness.sh  status_composer.sh  testenvs.sh  toolchain_python.sh  ui.sh  utils.sh  version.sh
scripts/: run-unit-tests.sh  spike_decision_graph.sh  test-impact.sh
tests/: README.md
tmp/: environment.yml  pyproject.toml  pyve_purge_log.txt
(+515 files in other folders)
